# Telegram-Automation

./: README.md  Telegram.py  client.py  env.env  googlenewscrape.py  llmcrawler.py  llmsetup.py  mathserver.py  pyproject.toml  randomserver.py  requirements.txt  scraper_format.py  scrapper_utils.py  servertester.py  testclientmcp.py
latestnewssavejson/: latestnews.json
praisonaiagents/: main.py  pyproject.toml
